# libagent

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile.alpine-arm64  Dockerfile.alpine-x64  README.md  build-alpine-all.sh  cbindgen.toml  codecov.yml
.github/workflows/: build-release.yml  ci.yml
benches/: http_benchmarks.rs
examples/: README.md
examples/c/: alpine-functional-test.c  dogstatsd.c  functional-test.c  uds_proxy.c
examples/dotnet/: DogStatsD.cs  Program.cs
examples/go/: dogstatsd.go  main.go
examples/go-pure/: dogstatsd.go  go.mod  main.go
examples/java/: DogStatsD.java  JNAExample.java
examples/js/: async-worker.js  dogstatsd.js  index.js  libagent-worker.js
examples/python/: dogstatsd.py  uds_proxy.py
examples/ruby/: dogstatsd.rb  uds_proxy.rb
include/: libagent.h
src/: config.rs  dogstatsd.rs  ffi.rs  http.rs  lib.rs  logging.rs  manager.rs  metrics.rs  monitor.rs  process.rs  shutdown.rs  uds.rs  winpipe.rs
tests/: dogstatsd_proxy.rs  dogstatsd_windows.rs  idempotent.rs  respawn.rs  start_stop_unix.rs  uds_proxy.rs  windows_pipe_proxy.rs  windows_sanity.rs
tests/common/: mod.rs
