[package]
name = "libagent"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ctor = "0.2"
shell-words = "1.1"
libc = "0.2"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
] }
log = { version = "0.4", optional = true }

[dev-dependencies]
serial_test = "2.0"
tempfile = "3"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
] }

[profile.release]
panic = "abort"

[profile.bench]
# Use release profile settings for benchmarks
inherits = "release"
# Enable debug info for profiling
debug = true

[[bench]]
name = "http_benchmarks"

[features]
default = []
# When enabled, route logs through the `log` crate instead of writing to stderr
log = ["dep:log"]
